--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "host": "hub",
   "name": "com.innovecs.template.2d",
   "type": "template",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "repository": {
-    "url" : "git@github.com:mypaxa00-innovecs/com.innovecs.template.2d.git",
+    "url" : "https://github.com/mypaxa00-innovecs/com.innovecs.template.2d",
     "type": "git"
   }
 }
